improvements in customer